--- a/order.yml
+++ b/order.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: lirui
-    url: jdbc:mysql://127.0.0.1:3306/dbgirl?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/springcloud_sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
 eureka:
